# customer-lifecycle-sql-analytics

./: .gitignore  README.md  pyproject.toml
artifacts/: analysis_findings.md  dashboard_snapshot.json  executive_summary.html
data/processed/: at_risk_accounts.csv  channel_efficiency.csv  cohort_retention.csv  region_scorecard.csv  renewal_pipeline.csv  revenue_bridge.csv  segment_performance.csv
data/raw/: accounts.csv  invoices.csv  marketing_spend.csv  monthly_lifecycle_metrics.csv
docs/: analysis_notes.md  architecture.md  metric_glossary.md
sql/: 001_views.sql  010_marts.sql  020_quality_checks.sql  030_business_questions.sql
src/customer_lifecycle_sql_analytics/: __init__.py  cli.py  config.py  data_generation.py  warehouse.py
tests/: test_sql_pipeline.py
