[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "customer-lifecycle-sql-analytics"
version = "0.1.0"
description = "SQL-first customer lifecycle analytics warehouse with cohort retention, revenue bridge, and performance scorecards."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0",
]

[project.scripts]
customer-lifecycle-sql-analytics = "customer_lifecycle_sql_analytics.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
